.metadata/.plugins/org.eclipse.cdt.ui/Tablero.build.log
11:48:32 **** Incremental Build of configuration Debug for project Tablero ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tablero.o" "..\\src\\Tablero.cpp" 
..\src\Tablero.cpp:18:1: error: 'Tablero' does not name a type
 Tablero::Tablero() {
 ^~~~~~~
..\src\Tablero.cpp:23:1: error: 'Tablero' does not name a type
 Tablero::~Tablero() {
 ^~~~~~~

11:48:33 Build Failed. 2 errors, 0 warnings. (took 651ms)

